Archive2/51/0c682db9dd696c/output
main.cpp:181:56: error: no 'const std::vector<double> BasisToestand::Toestand(int) const' member function declared in class 'BasisToestand'
 const vector<double> BasisToestand::Toestand(int GOLF) const            
                                                        ^
main.cpp: In function 'int main()':
main.cpp:227:43: error: 'class BasisToestand' has no member named 'Toestand'
     cout << "Testing Tsunami" << funPtr1->Toestand(10) << endl;       
                                           ^
